@@ -2,6 +2,14 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2025-05-11:
+
+- Fixed an issue that prevented Unicode code points in $'...' strings and
+  printf(1) formatters from being converted if the current locale if it is
+  not a multibyte locale. (They were already being converted for other
+  multibyte locales like Shift-JIS.) E.g., if the locale is en_GB.ISO8859-1,
+  echo $'\u00E9' now outputs an e with an accent aigu encoded in ISO8859-1.
+
 2025-05-10:
 
 - Fixed a memory leak in history expansion.
